# Programmieren_Abschlussprojekt

./: README.md  ToDo.md  finished_tours.py  geo.py  gpx_reader.py  kalendar.py  login.py  main.py  plotting.py  pyproject.toml  registration.py  test.py  tour.py  tour_planner.py  user.py  user_data.json
data/gpxtracks/: 4_Almen_Rundfahrt.gpx  Alpl.gpx  Um_die_Mieminger_Kette_.gpx  Wannig_Runde.gpx  activity_19790590879.gpx  activity_4895464341.gpx
parquet_data/: 4_Almen_Rundfahrt.parquet  Alpl.parquet  Um_die_Mieminger_Kette_.parquet  Wannig_Runde.parquet  activity_19790590879.parquet  activity_4895464341.parquet
