[project]
name = "Programmieren_Abschlussprojekt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marc", email = "wm2041@mci4me.at"},
]
dependencies = ["streamlit>=1.58.0", "streamlit-float>=0.4.0", "gpxpy>=1.6.2", "folium>=0.20.0", "streamlit-folium>=0.27.2", "pandas>=3.0.4", "geopy==2.4.1", "requests==2.31.0", "urllib3==2.0.7", "certifi>=2026.6.17"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
